QWebSocketServer: handle new connection after invalid one

Manually tested with sslechoserver and sslechoclient in examples,
invalid connection from "telnet localhost 1234".

Task-number: QTBUG-44866
Change-Id: I19c29c7c5f57eef4f9ae069e105fd1db346fb5c5
Reviewed-by: Luca Niccoli <lultimouomo@gmail.com>
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>